tests/error/too_many_inputs.ca.output
a = 1
b = 2
Error occurred:
[tests/error/too_many_inputs.ca:7,0] f() | Too many inputs, expected 2, received 3

